--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,12 @@ python:
   # PyPy versions
   - "pypy"  # PyPy2 2.5.0
   - "pypy3" # Pypy3 2.4.0
+before_install:
+  - pip install coveralls
 # command to install dependencies
 install:
   - pip install .
 # command to run tests
 script: pytest
+after_success:
+    - coveralls
